--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <main class="main_div"> <!--głównie "ciało" strony-->
+    <main class="main div"> <!--głównie "ciało" strony-->
         <section> <!--sekcja strony-->
             <header> <!--sekcja typu nagłówek-->
                 <h1>Mateusz Kłys - Strona domowa</h1>
@@ -35,7 +35,7 @@
         </section>
 <article><!--Znacznik artykułu -->
 
-
+<h1>lorem ipsums</h1>
 
 </article> 
         <footer>
